
  o Minor features (controller):
    - Add a "PURPOSE=" argument to "STREAM NEW" events, as suggested by
      Robert Hogan. Fixes the first part of bug 681.

  o Minor bugfixes (controller):
    - When tunneling an encrypted directory connection, and its first circuit
      fails do not leave it unattached and ask the controller to deal.  Fixes
      the second part of bug 681.

  o New files:
    - A new contrib/tor-exit-notice.html file that exit relay operators
      can put on their website to help reduce abuse queries.

  o Minor features (build):
    - Add support to detect Libevent versions in the 1.4.x series on mingw.
    - Fix build on gcc 4.3 with --enable-gcc-warnings set.


Changes in version 0.2.0.26-rc - 2008-05-13
  Tor 0.2.0.26-rc fixes a major security vulnerability caused by a bug
  in Debian's OpenSSL packages. All users running any 0.2.0.x version
  should upgrade, whether they're running Debian or not.

  o Major security fixes:
    - Use new V3 directory authority keys on the tor26, gabelmoo, and
      moria1 V3 directory authorities. The old keys were generated with
      a vulnerable version of Debian's OpenSSL package, and must be
      considered compromised. Other authorities' keys were not generated
      with an affected version of OpenSSL.

  o Major bugfixes:
    - List authority signatures as "unrecognized" based on DirServer
      lines, not on cert cache. Bugfix on 0.2.0.x.

  o Minor features:
    - Add a new V3AuthUseLegacyKey option to make it easier for
      authorities to change their identity keys if they have to.


Changes in version 0.2.0.25-rc - 2008-04-23
  Tor 0.2.0.25-rc makes Tor work again on OS X and certain BSDs.

  o Major bugfixes:
    - Remember to initialize threading before initializing logging.
      Otherwise, many BSD-family implementations will crash hard on
      startup. Fixes bug 671. Bugfix on 0.2.0.24-rc.

  o Minor bugfixes:
    - Authorities correctly free policies on bad servers on