@@ -13,6 +13,10 @@ Changes in version 0.2.0.27-rc - 2008-05-??
       fails do not leave it unattached and ask the controller to deal.  Fixes
       the second part of bug 681.
 
+  o Minor features:
+    - Allow comments in geoip file.
+    - Make bridge authorities never serve extrainfo docs.
+
   o New files:
     - A new contrib/tor-exit-notice.html file that exit relay operators
       can put on their website to help reduce abuse queries.
